--- a/src/Backend/Core/Layout/Sass/components/_loader.scss
+++ b/src/Backend/Core/Layout/Sass/components/_loader.scss
@@ -67,3 +67,7 @@
   transform: rotate(-135deg);
   background: #bbb;
 }
+
+#ajaxSpinner {
+  z-index: 5;
+}
